--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 
-<!-- testing -->
 <html>
   <head>
-    <title>Portfolio</title>
+    <title>My Portfolio</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -78,13 +77,13 @@
             </p>
           </article>
           <article class="col-6 col-12-xsmall work-item">
-            <a href="images/fulls/pong.png" class="image fit thumb"
+            <!-- <a href="images/fulls/pong.png" class="image fit thumb"
               ><img src="images/thumbs/pong-small.png" alt=""
-            /></a>
+            /></a> -->
             <a href="images/fulls/snake.png" class="image fit thumb"
               ><img src="images/thumbs/snake-small.png" alt=""
             /></a>
-            <a href="images/fulls/connect4.png" class="image fit thumb"
+            <!-- <a href="images/fulls/connect4.png" class="image fit thumb"
               ><img src="images/thumbs/connect4-small.png" alt=""
             /></a>
             <a
@@ -98,7 +97,7 @@
               ><img
                 src="images/thumbs/rock-paper-scissors-network-game-small.png"
                 alt=""
-            /></a>
+            /></a> -->
             <h3>Project 2</h3>
             <p>Games that I created using Python coding.</p>
           </article>
@@ -132,7 +131,7 @@
                 <h3 class="icon solid fa-envelope">
                   <span class="label">Email</span>
                 </h3>
-                <a href="#" id="email">justforwork772@gmail.com</a>
+                <a href="" id="email">justforwork772@gmail.com</a>
               </li>
             </ul>
           </div>
