--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="header">
       <div class="inner">
         <a href="#" class="image avatar"
-          ><img src="images/avatar.jpg" alt=""
+          ><img src="images/chris-ried-ieic5Tq8YMk-unsplash-small.jpg" alt=""
         /></a>
         <h1>
           <strong>My name is Hafiz</strong>, <br />
@@ -61,12 +61,20 @@
             <a
               href="images/fulls/Javascript-All-In-One-1.png"
               class="image fit thumb"
-              ><img src="images/thumbs/Javascript-All-In-One-1-small.png" alt=""
-            /></a>
+            >
+              <img
+                class="img-small"
+                src="images/thumbs/Javascript-All-In-One-1-small.png"
+                alt="Javascript-All-In-One-1-small.png"
+              />
+            </a>
             <!-- <a
               href="images/fulls/Javascript-All-In-One-2.png"
               class="image fit thumb"
-              ><img src="images/thumbs/Javascript-All-In-One-2-small.png" alt=""
+              ><img
+                class="img-small"
+                src="images/thumbs/Javascript-All-In-One-2-small.png"
+                alt="Javascript-All-In-One-2-small.png"
             /></a> -->
             <h3>Project 1</h3>
             <p>
@@ -77,25 +85,39 @@
           </article>
           <article class="col-6 col-12-xsmall work-item">
             <!-- <a href="images/fulls/pong.png" class="image fit thumb"
-              ><img src="images/thumbs/pong-small.png" alt=""
+              ><img
+                class="img-small"
+                src="images/thumbs/pong-small.png"
+                alt="pong-small.png"
             /></a> -->
-            <a href="images/fulls/snake.png" class="image fit thumb"
-              ><img src="images/thumbs/snake-small.png" alt=""
-            /></a>
+            <a href="images/fulls/snake.png" class="image fit thumb">
+              <img
+                class="img-small"
+                src="images/thumbs/snake-small.png"
+                alt="snake-small.png"
+              />
+            </a>
             <!-- <a href="images/fulls/connect4.png" class="image fit thumb"
-              ><img src="images/thumbs/connect4-small.png" alt=""
+              ><img
+                class="img-small"
+                src="images/thumbs/connect4-small.png"
+                alt="connect4-small.png"
             /></a>
             <a
               href="images/fulls/tetris-with-high-score.png"
               class="image fit thumb"
-              ><img src="images/thumbs/tetris-with-high-score-small.png" alt=""
+              ><img
+                class="img-small"
+                src="images/thumbs/tetris-with-high-score-small.png"
+                alt="tetris-with-high-score-small.png"
             /></a>
             <a
               href="images/fulls/rock-paper-scissors-network-game.png"
               class="image fit thumb"
               ><img
+                class="img-small"
                 src="images/thumbs/rock-paper-scissors-network-game-small.png"
-                alt=""
+                alt="rock-paper-scissors-network-game-small.png"
             /></a> -->
             <h3>Project 2</h3>
             <p>Games that I created using Python coding.</p>
