--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
               generator, a rock paper scissors, a function that can change the
               buttons in the html, and finally a blackjack game.
             </p>
+            <ul class="actions special">
+              <li>
+                <a
+                  href="https://github.com/just4work772/Javascript-All-in-One-Projects"
+                  class="button"
+                  >Check it Out</a
+                >
+              </li>
+            </ul>
           </article>
           <article class="col-6 col-12-xsmall work-item">
             <!-- <a href="images/fulls/pong.png" class="image fit thumb"
@@ -122,6 +131,15 @@
             /></a> -->
             <h3>Project 2</h3>
             <p>Games that I created using Python coding.</p>
+            <ul class="actions special">
+              <li>
+                <a
+                  href="https://github.com/just4work772/Python-Games"
+                  class="button"
+                  >Check it Out</a
+                >
+              </li>
+            </ul>
           </article>
         </div>
         <!-- <ul class="actions">
