--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link
+      rel="icon"
+      type="image/ico"
+      href="images/chris-ried-ieic5Tq8YMk-unsplash-small.jpg"
+    />
   </head>
   <body class="is-preload">
     <!-- Header -->
@@ -157,14 +162,13 @@
                 <h3 class="icon solid fa-id-card">
                   <span class="label">Name</span>
                 </h3>
-                Ak Mohd Hafizuddin <br />
-                Bin Pg Mohd Ghazalee
+                Ak Mohd Hafizuddin Bin Pg Mohd Ghazalee
               </li>
               <li>
                 <h3 class="icon solid fa-home">
                   <span class="label">Address</span>
                 </h3>
-                No. 22 Spg.115-18, Jln Binglu Barat, RPN,<br />
+                No. 22 Spg.115-18, Jln Binglu Barat, RPN, <br />
                 Kg. Tanah Jambu, Mukim Mentiri, BU 1129
               </li>
               <li>
