--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Header -->
     <header id="header">
       <div class="inner">
-        <a href="#" class="image avatar"
+        <a class="image avatar"
           ><img src="images/chris-ried-ieic5Tq8YMk-unsplash-small.jpg" alt=""
         /></a>
         <h1>
@@ -175,7 +175,7 @@
                 <h3 class="icon solid fa-envelope">
                   <span class="label">Email</span>
                 </h3>
-                <a href="" id="email">justforwork772@gmail.com</a>
+                <a id="email">justforwork772@gmail.com</a>
               </li>
             </ul>
           </div>
