--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1>
           <strong>My name is Hafiz</strong>, <br />
           I am a passionate programmer / developer <br />
-          that recently graduacted from <br />
+          that recently graduated from <br />
           Politeknik Brunei.
         </h1>
       </div>
